DesiNZC/objects/Case.object
<CustomObject>
    <fields>
        <fullName>CasTotScope1EmissionsInTco2e__c</fullName>
        <label>Total Scope 1 Emissions (tCO2e)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CasTotScope2LocBasedEmissions__c</fullName>
        <label>Total Scope 2 Location-Based Emissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CasTotScope2MktBasedEmissions__c</fullName>
        <label>Total Scope 2 Market-based Emissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CasTotScope3EmissionsInTco2e__c</fullName>
        <description>Roll-Up of Total Scope 3 Emissions (tCO2e)</description>
        <label>Total Scope 3 Emissions (tCO2e)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CasTotalScp3DnstrmEmissions__c</fullName>
        <description>Roll-Up of Total Scope 3 Downstream Emissions (tCO2)</description>
        <label>Total Scope 3 Downstream Emissions(tCO2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CasTotalScp3UpstrmEmissions__c</fullName>
        <description>Roll-Up of Total Scope 3 Upstream Emissions (tCO2e)</description>
        <label>Total Scope 3 Upstream Emissions (tCO2e)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scope_3_Carbon_Footprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scope 3 Carbon Footprint</label>
        <referenceTo>Scope3CrbnFtprnt</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Asset_Carbon_Footprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle Asset Carbon Footprint</label>
        <referenceTo>VehicleAssetCrbnFtprnt</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>